Rework including 1. Handle errros due to Google DTD https redirect 2. Fixed value of src/main/java making assumptions about the location of .gwt.xml files 3. Change logging to info for noisey outputs. 4. Test refactoring. 5. Move from File to Path access due to ability to manipulate paths